[metadata]
name = webwombat
# version = attr: src.VERSION
description = My package description
long_description = file: README.md
# keywords = one, two
# license = BSD 3-Clause License
classifiers =
    # License :: OSI Approved :: Unkown License
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    requests
    importlib

[options.package_data]
* = *.cube

[options.entry_points]
console_scripts =
    wombat = webwombat:main

# [options.extras_require]
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

;[options.packages.find]
